# ChangeLog for sys-devel/autoconf-wrapper
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/autoconf-wrapper/ChangeLog,v 1.43 2006/11/24 16:25:25 corsair Exp $

  24 Nov 2006; Markus Rothe <corsair@gentoo.org>
  autoconf-wrapper-3.2-r2.ebuild:
  Stable on ppc64; bug #144467

*autoconf-wrapper-4-r2 (17 Nov 2006)

  17 Nov 2006; Mike Frysinger <vapier@gentoo.org> files/ac-wrapper-4.sh,
  +autoconf-wrapper-4-r2.ebuild:
  Add support for autoconf-2.61.

  07 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  autoconf-wrapper-3.2-r2.ebuild:
  Stable on sparc wrt #144467

  05 Nov 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  autoconf-wrapper-3.2-r2.ebuild:
  stable on ppc (needed for bug #144467)

*autoconf-wrapper-4-r1 (05 Nov 2006)

  05 Nov 2006; Mike Frysinger <vapier@gentoo.org> files/ac-wrapper-4.sh,
  +autoconf-wrapper-4-r1.ebuild:
  Fix up SLOT/VER collision as pointed out by Alexis Ballier.

*autoconf-wrapper-4 (05 Nov 2006)

  05 Nov 2006; Mike Frysinger <vapier@gentoo.org> +files/ac-wrapper-4.sh,
  +autoconf-wrapper-4.ebuild:
  Add a more flexible wrapper using stuff from automake-wrapper-3 and allow
  WANT_AUTOCONF to be a space delimited list.

  03 Nov 2006; Fabian Groffen <grobian@gentoo.org>
  autoconf-wrapper-3.2.ebuild, autoconf-wrapper-3.2-r2.ebuild:
  Dropped ppc-macos, see you in prefix.

  01 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  autoconf-wrapper-3.2-r2.ebuild:
  Stable on amd64/x86 wrt bug #144467.

  17 Oct 2006; Roy Marples <uberlord@gentoo.org>
  autoconf-wrapper-3.2-r2.ebuild:
  Added ~sparc-fbsd keyword.

  29 Aug 2006; Fernando J. Pereda <ferdy@gentoo.org>
  autoconf-wrapper-3.2.ebuild:
  Stable on alpha as per bug #137896

  29 Jun 2006; Martin Schlemmer <azarah@gentoo.org>
  +files/ac-wrapper-3.3.sh:
  Update wrapper to be more generic with different versions of autconf-2.59 or
  later.

*autoconf-wrapper-3.2-r2 (27 Jun 2006)
