@@ -2,10 +2,10 @@ AUX ac-wrapper-3.2.sh 3242 RMD160 9fb11d8fcac9b33e9d9eda56e663e26bc8ef4b48 SHA1 
 MD5 0a542dd224e861aba771526c9b75edca files/ac-wrapper-3.2.sh 3242
 RMD160 9fb11d8fcac9b33e9d9eda56e663e26bc8ef4b48 files/ac-wrapper-3.2.sh 3242
 SHA256 4fecc535d7dd0f0424e637a2e3a8f0837832a32ec517ac0912b28a428f00941e files/ac-wrapper-3.2.sh 3242
-AUX ac-wrapper-4.sh 4298 RMD160 5efa3c29b52eb3125f7e0b1075718691f55b3b79 SHA1 f6b8d3174fc91c923bb55ebc85be837b459f89fa SHA256 cebcfc33a6271057daf9a064b50a239c27654a5997968d9703feb0694e3753dd
-MD5 0317a88508af09cb817f67ce78d864bd files/ac-wrapper-4.sh 4298
-RMD160 5efa3c29b52eb3125f7e0b1075718691f55b3b79 files/ac-wrapper-4.sh 4298
-SHA256 cebcfc33a6271057daf9a064b50a239c27654a5997968d9703feb0694e3753dd files/ac-wrapper-4.sh 4298
+AUX ac-wrapper-4.sh 4298 RMD160 6dd4c587191a5ff3d1231c1900783cff1665a99b SHA1 4bd7d8738dfa391ba2597e02fdf12dd651153972 SHA256 227328e6debb1f224b7af70d9c24ed92e942e7b43330d16e88707daac1e384df
+MD5 21320f1b76762c298f2846c214e0ae69 files/ac-wrapper-4.sh 4298
+RMD160 6dd4c587191a5ff3d1231c1900783cff1665a99b files/ac-wrapper-4.sh 4298
+SHA256 227328e6debb1f224b7af70d9c24ed92e942e7b43330d16e88707daac1e384df files/ac-wrapper-4.sh 4298
 EBUILD autoconf-wrapper-3.2-r2.ebuild 930 RMD160 87169f99bdc01cad4ea6a2d676e56ba7c454f97e SHA1 baa5a775b2cb5370f846b888a3b45f33793c3d79 SHA256 11c1d8cd5b6acc2bf8dbc13ab8b36d3221110a8e38f54510032b7e2edb80b337
 MD5 e1a1f43ba3f4c240f8ae5fa175a88d03 autoconf-wrapper-3.2-r2.ebuild 930
 RMD160 87169f99bdc01cad4ea6a2d676e56ba7c454f97e autoconf-wrapper-3.2-r2.ebuild 930
@@ -14,14 +14,14 @@ EBUILD autoconf-wrapper-3.2.ebuild 805 RMD160 98371b19e56774a1510f9addc82c743ffb
 MD5 7bdf7b53a85ba174f1bcb69d5cb9858e autoconf-wrapper-3.2.ebuild 805
 RMD160 98371b19e56774a1510f9addc82c743ffb377117 autoconf-wrapper-3.2.ebuild 805
 SHA256 db2b255efcf7ea122390929a1a37299ce2913cf43f0c6aa22a91eb695cb743b6 autoconf-wrapper-3.2.ebuild 805
-EBUILD autoconf-wrapper-4-r2.ebuild 853 RMD160 c495a1f0d68d9953e569142e67f31ba981dbb833 SHA1 83c7bfc9b829a98720e6201af052aa10bdbd9428 SHA256 9e7ce6f37d20a65fe5036458d419d19f6c901344528ccf5466886bf6dbe59880
-MD5 e9b33c6a820e78078924068ee1efc7b7 autoconf-wrapper-4-r2.ebuild 853
-RMD160 c495a1f0d68d9953e569142e67f31ba981dbb833 autoconf-wrapper-4-r2.ebuild 853
-SHA256 9e7ce6f37d20a65fe5036458d419d19f6c901344528ccf5466886bf6dbe59880 autoconf-wrapper-4-r2.ebuild 853
-MISC ChangeLog 5980 RMD160 691e9158506beae8e62b8e49103e3f8ee25b3a2d SHA1 b0e23fccaf79fc67c475bb835766c933c7cbc87e SHA256 3829d7fd962db10986d5ffd1c5f7743fbc72fd7f14519ac4e19b460390dc34ec
-MD5 01e1c60b151e457fabca4af46a7bdc6b ChangeLog 5980
-RMD160 691e9158506beae8e62b8e49103e3f8ee25b3a2d ChangeLog 5980
-SHA256 3829d7fd962db10986d5ffd1c5f7743fbc72fd7f14519ac4e19b460390dc34ec ChangeLog 5980
+EBUILD autoconf-wrapper-4-r3.ebuild 853 RMD160 6ee0efd150cd450e88128f78f239fdd9c1a7630c SHA1 f7f5a4a9cfa00010f57368e0f7972332b9cf1e77 SHA256 1f4ba4a4ac55aeb02cc65c9018896d8470b70495e6e80401924d84db68f470fa
+MD5 def698ce7657577bb27574ce5759cedc autoconf-wrapper-4-r3.ebuild 853
+RMD160 6ee0efd150cd450e88128f78f239fdd9c1a7630c autoconf-wrapper-4-r3.ebuild 853
+SHA256 1f4ba4a4ac55aeb02cc65c9018896d8470b70495e6e80401924d84db68f470fa autoconf-wrapper-4-r3.ebuild 853
+MISC ChangeLog 6182 RMD160 5537a95c0294672468a44c27bab31fe15a81ff06 SHA1 9f2ad261bbe681c42d9c5e48ffe5b0702667b1e3 SHA256 726552cac0de45e135f276fdb8ccce0bd8894672bdcf767afc61657ce8f8715e
+MD5 dfb6d1454436f390ed0a4168e6b8d26c ChangeLog 6182
+RMD160 5537a95c0294672468a44c27bab31fe15a81ff06 ChangeLog 6182
+SHA256 726552cac0de45e135f276fdb8ccce0bd8894672bdcf767afc61657ce8f8715e ChangeLog 6182
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -32,6 +32,6 @@ SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/di
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-autoconf-wrapper-3.2-r2 0
 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-autoconf-wrapper-3.2-r2 0
 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-autoconf-wrapper-3.2-r2 0
-MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-autoconf-wrapper-4-r2 0
-RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-autoconf-wrapper-4-r2 0
-SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-autoconf-wrapper-4-r2 0
+MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-autoconf-wrapper-4-r3 0
+RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-autoconf-wrapper-4-r3 0
+SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-autoconf-wrapper-4-r3 0
