@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/autoconf-wrapper
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/autoconf-wrapper/ChangeLog,v 1.43 2006/11/24 16:25:25 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/autoconf-wrapper/ChangeLog,v 1.44 2006/11/26 14:35:36 vapier Exp $
+
+*autoconf-wrapper-4-r3 (26 Nov 2006)
+
+  26 Nov 2006; Mike Frysinger <vapier@gentoo.org> files/ac-wrapper-4.sh,
+  +autoconf-wrapper-4-r3.ebuild:
+  Fix WANT_AUTOMAKE/WANT_AUTOCONF typo #156050 by Sandro.
 
   24 Nov 2006; Markus Rothe <corsair@gentoo.org>
   autoconf-wrapper-3.2-r2.ebuild:
